--- a/style.css
+++ b/style.css
@@ -226,25 +226,61 @@ button:hover {
 }
 
 .social {
-    display: inline-block;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.social li {
-    list-style: none;
-    margin: 2em 0.5em;
-}
-
-.social li a {
+.social span a {
+    color: white;
     text-decoration: none;
-    color: linear-gradient(red, blue);
-    font-weight: bold;
+    background-color: crimson;
+    padding: 10px 20px;
+    margin: 2em;
+    border-radius: 10px;
 }
 
 #About {
     width: 100%;
 }
+
+
+/******/
+
+.ace {
+    font-family: sans-serif;
+    font-size: 2rem;
+    text-align: center;
+    font-weight: 500;
+    position: relative;
+}
+
+.ace::before {
+    content: "";
+    position: absolute;
+    background-color: white;
+    width: 150px;
+    height: 3px;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: 3rem;
+}
+
+.ace::after {
+    content: "Who i am";
+    color: crimson;
+    position: absolute;
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: #1d1d1d;
+    bottom: 2.5rem;
+    padding: 0 3px;
+    right: 50%;
+    transform: translate(50%);
+}
+
+
+/****/
 
 #About div {
     display: flex;
