--- a/style.css
+++ b/style.css
@@ -186,13 +186,38 @@ button {
     border: 1px solid var(--coloration);
     border-radius: 5px;
     font-weight: 300;
+    position: relative;
+    overflow: hidden;
+    font-weight: 400;
 }
 
-button:hover {
+button::before {
+    content: "";
+    background-color: crimson;
+    border-radius: 5px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 0%;
+    height: 0%;
+    transition: 1s all ease-in-out;
+    z-index: -1;
+    transform: translate(-50%, -50%) rotate(25deg);
+}
+
+button:hover::before {
+    color: white;
+    width: 150%;
+    height: 210%;
+}
+
+
+/* button:hover {
     background-color: var(--coloration);
     color: var(--text-color);
     transition: all 0.8s ease;
-}
+} */
 
 .home-section img {
     margin-left: 70px;
@@ -267,7 +292,6 @@ button:hover {
 }
 
 .ace::after {
-    content: "Who i am";
     color: crimson;
     position: absolute;
     font-size: 1rem;
@@ -280,7 +304,32 @@ button:hover {
 }
 
 
-/****/
+/***about***/
+
+.ace::after {
+    content: "Who i am";
+}
+
+
+/***skills***/
+
+.skills::after {
+    content: "do";
+}
+
+
+/** Projects**/
+
+.projects::after {
+    content: "i do";
+}
+
+
+/***COntacts***/
+
+.title::after {
+    content: "Ace1";
+}
 
 #About div {
     display: flex;
