--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@ footer p {
 
 @media (max-width:530px) {
     .home-section .left {
-        margin-top: 2em;
+        margin-top: 1em;
     }
 }
 
@@ -820,6 +820,12 @@ footer p {
     }
 }
 
+@media (max-width: 490px) {
+    .home-section .left {
+        margin-top: 2em;
+    }
+}
+
 @media (max-width: 400px) {
     .home-section img {
         width: 274px;
@@ -829,6 +835,9 @@ footer p {
     }
     .text_about {
         /* background-color: red; */
+    }
+    .home-section .left {
+        margin-top: -5em;
     }
     #About div div p {
         text-align: justify;
