--- a/k.css
+++ b/k.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap');
 :root {
-    --background-color: #1d1d1d;
-    --text-color: white;
+    --background-color: white;
+    --text-color: black;
     --coloration: crimson;
 }
 
@@ -36,6 +36,14 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
+p {
+    color: black;
+}
+
+.text {
+    color: black;
+}
+
 a {
     text-decoration: none;
     color: rgb(38, 68, 202);
@@ -56,7 +64,7 @@ nav {
 /******/
 
 .text {
-    color: white;
+    color: black;
     font-size: 1.2em;
     font-weight: 300;
     text-align: justify;
@@ -157,7 +165,7 @@ nav ul li .dark:hover::before {
 
 .intro {
     font-size: 2em;
-    color: white;
+    color: black;
     font-weight: bold;
 }
 
@@ -635,10 +643,9 @@ input[type="submit"] {
 textarea {
     width: 100%;
     height: 150px;
-    /* padding: 15px; */
-    /* box-sizing: border-box; */
-    padding: 4px 20px;
-    /* border: 2px solid rgb(237, 231, 231); */
+    padding: 15px;
+    box-sizing: border-box;
+    border: 2px solid rgb(237, 231, 231);
     color: black;
     border-radius: 4px;
     background-color: #f8f8f8;
@@ -891,78 +898,3 @@ footer p {
 .bod {
     background: blue;
 }
-
-
-/*text animation*/
-
-
-/*
-.wrapper {
-    display: flex;
-}
-
-.wrapper .static-txt {
-    color: #fff;
-    font-size: 2em;
-    font-weight: 400;
-    position: relative;
-}
-
-.wrapper .dynamic-txts {
-    margin-left: 15px;
-    height: 90px;
-    line-height: 90px;
-    overflow: hidden;
-}
-
-
-/*pour changer la couleur des noms*/
-
-
-/*
-.dynamic-txts li {
-    list-style: none;
-    color: crimson;
-    font-size: -9em;
-    font-weight: 300;
-    position: relative;
-    top: 0;
-    animation: slide 12s steps(4) infinite;
-}
-
-@keyframes slide {
-    100% {
-        top: -360px;
-    }
-}
-
-.dynamic-txts li span {
-    /* position: relative; */
-
-
-/* margin: 5px 0; */
-
-
-/* line-height: 90px; 
-}
-
-.dynamic-txts li span::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    height: 0;
-    width: 89%;
-    background: #1d1d1d;
-    border-left: 2px solid crimson;
-    animation: typing 2s steps(10) infinite;
-}
-
-@keyframes typing {
-    40%,
-    60% {
-        left: calc(100% + 30px);
-    }
-    100% {
-        left: 0;
-    }
-}*/
